--- a/buycar/buycar.html
+++ b/buycar/buycar.html
@@ -13,9 +13,8 @@
     <link rel="stylesheet" href="./css/buycar.css">
 </head>
 <body>
-    <div class="z-buycarmask">
-
-    </div>
+   
+    
     <div class="z-head">
         <div class="header">
             <img src="./img/logo.png" alt="">
@@ -129,6 +128,12 @@
         </div>
     </div>
     <div class="z-buycar">
+        <div class="z-buycarmask">
+            <div class="z-changeremove">
+                <h3>您确定要移除所有您购物车中的物品吗？</h3>
+                <p class="z-yes">是</p><p class="z-no">否</p>
+            </div>
+        </div>
         <div class="z-buycarmain">
             <div class="z-buycarlist">所有产品 > 我的购物车</div>
             <h2 class="z-buycartitle">我的购物车</h2>
