--- a/chat.html
+++ b/chat.html
@@ -12,7 +12,7 @@
     <div class="c3_main">
         <div class="c2_kefu">
             <h2>Steam 客服</h2>
-            <h4>您有什么需要帮忙的吗？</h4>
+            <h4 class="c3_h4c">某某，您有什么需要帮忙的吗？</h4>
         </div>
         <div id="c3_main1" class="c3_main1">
             <ul id="c3_content" class="c3_content">
@@ -54,8 +54,6 @@
 </div> 
 <script src="./js/chat.js"></script> 
 <script src="./js/ajax.js"></script> 
-<script>
-    
-</script> 
+<script src="./js/cookie.js"></script> 
 </body>
 </html>
