链接图片下载后的修改

--- a/w-shopping.html
+++ b/w-shopping.html
@@ -26,72 +26,72 @@
         <div class="w2-main-center">
             <div class="w2-main-center-le">
                 <div class="w2-main-center-le1">
-                    <video src="https://media.st.dl.bscstorage.net/steam/apps/256758435/movie480.mp4?t=1565806635" 
+                    <video src="./img/w-movie1.mp4" 
                     class="w2-vid" autoplay="autoplay" controls="controls" muted="muted" loop="loop"></video>
                 </div>
                 <div class="w2-main-center-le2" >
                     <div class="w2-img">
                         <div class="w2-img-img " style="border: 2px solid #fff;">
-                            <img src="https://media.st.dl.bscstorage.net/steam/apps/256758435/movie.184x123.jpg?t=1565806635" alt="">
+                            <img src="./img/w-21.jpg" alt="">
                             <div class="w2-img-mark"></div>
                         </div>
                         <div class="w2-img-img">
-                            <img src="https://media.st.dl.bscstorage.net/steam/apps/256754907/movie.184x123.jpg?t=1561954882" alt="">
+                            <img src="./img/w-22.jpg" alt="">
                             <div class="w2-img-mark"></div>
                         </div>
                         <div class="w2-img-img">
-                            <img src="https://media.st.dl.bscstorage.net/steam/apps/991780/ss_668c1d36b36bc527674f06c88384a2f71d87b475.600x338.jpg?t=1574959886" alt="">
+                            <img src="./img/w-23.jpg" alt="">
                         </div>
                         <div class="w2-img-img">
-                            <img src="https://media.st.dl.bscstorage.net/steam/apps/991780/ss_2e1a57c83a19af2655b92b56f81a5da5ad4e47fd.600x338.jpg?t=1574959886" alt="">
+                            <img src="./img/w-24.jpg" alt="">
                         </div>
                         <div class="w2-img-img">
-                            <img src="https://media.st.dl.bscstorage.net/steam/apps/991780/ss_dc5daed3f5509e3d708320d3cfc7ab610b64d1c9.600x338.jpg?t=1574959886" alt="">
+                            <img src="./img/w-25.jpg" alt="">
                         </div>
                         <div class="w2-img-img">
-                            <img src="https://media.st.dl.bscstorage.net/steam/apps/991780/ss_1bac6d4580d57bc89aaece30fd13eb7c0632e86e.600x338.jpg?t=1574959886" alt="">
+                            <img src="./img/w-26.jpg" alt="">
                         </div>
                         <div class="w2-img-img">
-                            <img src="https://media.st.dl.bscstorage.net/steam/apps/991780/ss_385bd35a969edd9edfe8c58bb4230152ac41515c.600x338.jpg?t=1574959886" alt="">
+                            <img src="./img/w-27.jpg" alt="">
                         </div>
                         <div class="w2-img-img">
-                            <img src="https://media.st.dl.bscstorage.net/steam/apps/991780/ss_040f413ec833d6174d97ffbbe9a40508a28b7752.600x338.jpg?t=1574959886" alt="">
+                            <img src="./img/w-28.jpg" alt="">
                         </div>
                         <div class="w2-img-img">
-                            <img src="https://media.st.dl.bscstorage.net/steam/apps/991780/ss_9621de66e73ea3963c04a3d5a870e219f2b201aa.600x338.jpg?t=1574959886" alt="">
+                            <img src="./img/w-29.jpg" alt="">
                         </div>
                         <div class="w2-img-img">
-                            <img src="https://media.st.dl.bscstorage.net/steam/apps/991780/ss_a59a5e48e1dc12bc4f28d04a46a1e157a2f5f35d.600x338.jpg?t=1574959886" alt="">
+                            <img src="./img/w-30.jpg" alt="">
                         </div>
                         <div class="w2-img-img">
-                            <img src="https://media.st.dl.bscstorage.net/steam/apps/991780/ss_696fb5c886564ea05ce72b906f706596c9831de9.600x338.jpg?t=1574959886" alt="">
+                            <img src="./img/w-31.jpg" alt="">
                         </div>
                         <div class="w2-img-img">
-                            <img src="https://media.st.dl.bscstorage.net/steam/apps/991780/ss_acf1c29de6f360720d06b719d2f639eb92aa851a.600x338.jpg?t=1574959886" alt="">
+                            <img src="./img/w-32.jpg" alt="">
                         </div>
                         <div class="w2-img-img">
-                            <img src="https://media.st.dl.bscstorage.net/steam/apps/991780/ss_8d0556e394b974a87c68ce2375a959946ecb2631.600x338.jpg?t=1574959886" alt="">
+                            <img src="./img/w-33.jpg" alt="">
                         </div>
                         <div class="w2-img-img">
-                            <img src="https://media.st.dl.bscstorage.net/steam/apps/991780/ss_4c5c08c038304a703ef7ab76410b8a7980178e85.600x338.jpg?t=1574959886" alt="">
+                            <img src="./img/w-34.jpg" alt="">
                         </div>
                         <div class="w2-img-img">
-                            <img src="https://media.st.dl.bscstorage.net/steam/apps/991780/ss_e5f36303d51eba7170c0dcbd04ec7151d98f591f.600x338.jpg?t=1574959886" alt="">
+                            <img src="./img/w-35.jpg" alt="">
                         </div>
                         <div class="w2-img-img">
-                            <img src="https://media.st.dl.bscstorage.net/steam/apps/991780/ss_9a3583e15ea11c29beb17c46e9e2c0fe12ac7459.600x338.jpg?t=1574959886" alt="">
+                            <img src="./img/w-36.jpg" alt="">
                         </div>
                         <div class="w2-img-img">
-                            <img src="https://media.st.dl.bscstorage.net/steam/apps/991780/ss_c8305feb0b2fe2a5063a328e26df446189b2663e.600x338.jpg?t=1574959886" alt="">
+                            <img src="./img/w-37.jpg" alt="">
                         </div>
                         <div class="w2-img-img">
-                            <img src="https://media.st.dl.bscstorage.net/steam/apps/991780/ss_94af851116c16bcf8cb354bb02ae8280ee4868c3.600x338.jpg?t=1574959886" alt="">
+                            <img src="./img/w-38.jpg" alt="">
                         </div>
                         <div class="w2-img-img">
-                            <img src="https://media.st.dl.bscstorage.net/steam/apps/991780/ss_8e602d0d807c6d3893c99d342dff7f2b5c05f367.600x338.jpg?t=1574959886" alt="">
+                            <img src="./img/w-39.jpg" alt="">
                         </div>
                         <div class="w2-img-img">
-                            <img src="https://media.st.dl.bscstorage.net/steam/apps/991780/ss_102aaadf0a78b78e1fc22d035208c5272cde3952.600x338.jpg?t=1574959886" alt="">
+                            <img src="./img/w-40.jpg" alt="">
                         </div>
                         
                     </div>
@@ -290,7 +290,7 @@
 
     </div>
 </div>
-<script src="./js/jquery-2.1.4.min.js"></script>
+<script src="./js/jquery-1.8.3.js"></script>
 <script src="./js/w-shopping.js"></script>
 </body>
 </html>
